# catsay

./: .gitignore  Cargo.toml  README.md  cargo.toml  flake.nix  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: publish.yml
catsay/: Cargo.toml
catsay/src/: cats.rs  cli.rs  lib.rs  main.rs  options.rs  utils.rs  web_term.rs
catsay/src/cli/: parser.rs
catsay_web/: Cargo.toml
catsay_web/src/: io.rs  lib.rs
djlaser_catsay/: Cargo.toml  configured-cat.cat  simple-cat.cat
djlaser_catsay/src/: cats.rs  cli.rs  lib.rs  options.rs
djlaser_catsay/src/cli/: actions.rs  parser.rs  util.rs
djlaser_catsay_web/: Cargo.toml
djlaser_catsay_web/src/: io.rs  lib.rs
src/: index.ts
