[package]
name = "djlaser_catsay"
version = "0.2.1"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[[bin]]
name = "catsay"
required-features = ["cli"]

[features]
cli = ["dep:clap"]

[dependencies]
clap = { version = "4.5.22", optional = true, features = ["derive"] }
fastrand = "2.2.0"

